--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
 		<meta name="Biblioteca de anime | My Anime Lib" />
-		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
+		<!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" /> -->
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
